# aoc2020

./: .gitignore  LICENSE  README.md  TODO.org  aoc2020.opam  dune-project  new-day.bash
lib/: day0.ml  day1.ml  day1.mli  day2.ml  day3.ml  day4.ml  day5.ml  day5.mli  day6.ml  day7.ml  day8.ml  day9.ml  dune  error.mli  file.ml  file.mli  lexer.ml  lexer.mli  location.ml  location.mli  log.ml  log.mli
test/: day1.ml  dune  puzzle_results.ml
